# OpenColorIO

./: .appveyor.yml  .buildinfo  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  CNAME  COMMITTERS.md  CONTRIBUTING.md  ChangeLog  ChangeLog.html  CompatibleSoftware.html  Contexts.html  EasyCLA-Validation.md  EasyCLA.md  FAQ.html  GOVERNANCE.md  INSTALL  INSTALL.md  INSTALL_SPI  Jenkinsfile  LICENSE  LICENSE.md  License.html  MANIFEST.in  Overview.html  PROCESS.md  QUICK_TEST_STEPS.md  README  README.md  SECURITY.md  Setup.html  THIRD-PARTY.md  TODO  (+27 more)
docs/: CMakeLists.txt  ChangeLog.rst  CompatibleSoftware.rst  Doxyfile.in  FAQ.rst  License.rst  Overview.rst  Setup.rst  UsageExamples.rst  V2_DOC_README.md  conf.py  conf.py.in  downloads.rst  index.rst  installation.rst  introduction.rst  requirements.txt  toc_redirect.rst
docs/ASWF-WIP/: CLA-corporate.md  CLA-individual.md  Charter.md
docs/api/: _index.rst  apphelpers.rst  baker.rst  baker.rst.in  c_baker.rst  c_colorspace.rst  c_colorspaceset.rst  c_config.rst  c_context.rst  c_cpuprocessor.rst  c_dynamicproperty.rst  c_filerules.rst  c_formatmetadata.rst  c_global.rst  c_gpuprocessor.rst  c_gpushadercreator.rst  c_gpushaderdesc.rst  c_imagedesc.rst  c_look.rst  c_packedimagedesc.rst  c_planarimagedesc.rst  c_processor.rst  c_viewingrules.rst  change_log.rst  color_space.rst.in  colorspace.rst  colorspace.rst.in  config.rst  config.rst.in  constants.rst  context.rst  context.rst.in  dynamic_property.rst.in  dynamicproperty.rst  dynamicproperty.rst.in  enums.rst  enums.rst.in  exceptions.rst  exceptions.rst.in  format_metadata.rst.in  (+27 more)
docs/aswf/: CLA-corporate.md  CLA-individual.md  Charter.md  DCO.md  _index.rst  aswf_docker.rst  charter.rst  cla_dco.rst  license.rst
docs/concepts/: _index.rst
docs/configurations/: _index.rst  aces_1.0.3.rst  aces_1.1.rst  aces_1.2.rst  aces_cg.rst  aces_studio.rst  allocation_vars.rst  index.rst  nuke_default.rst  ocio_v2_demo.rst  spi_anim.rst  spi_pipeline.rst  spi_vfx.rst
docs/developers/: CII-BestPractices-status.md  coding_guidelines.rst  documentation_guidelines.rst  doxygen_style_guide.rst  getting_started.rst  index.rst  internal_architecture.rst  issues.rst  submitting_changes.rst  usage_examples.rst
docs/guides/: _index.rst
docs/license_info/: License.rst  _index.rst
docs/ociotheme/: layout.html  page.html  searchbox.html  theme.conf
docs/quick_start/: _index.rst  about_docs.rst  downloads.rst  faq.rst  for_artists.rst  for_config_authors.rst  for_contributors.rst  for_devs.rst  installation.rst
docs/releases/: _index.rst  ocio_2_0.rst  ocio_2_1.rst  ocio_2_2.rst  ocio_2_3.rst  ocio_2_4.rst  ocio_2_5.rst
docs/site/: README.md  README_theme.md  theme.toml
docs/tutorials/: _index.rst  baking_luts.rst  contributing.rst  tool_overview.rst
docs/upgrading_v2/: _index.rst  how_to.rst
docs/userguide/: baking_luts.rst  config_syntax.rst  contexts.rst  index.rst  looks.rst  tool_overview.rst
docs/workflow/: spi_vfx.rst  spi_workflow.rst
ext/: .gitignore  CMakeLists.txt  Sphinx-1.2b1.patch  Sphinx-1.2b3.patch  expat_2_2_5.patch  expressions.patch  ilmbasehalf-2.2.1.patch  lcms2-2.1.patch  md5-2002_04_13.patch  patch.cpp  pystring-r19.patch  sphinx-f52b631f501a.patch  tinyxml_2_6_1.patch  yaml-cpp-0.2.5.patch  yaml-cpp-0.3.0-sourcesList.txt  yaml-cpp-0.3.0.patch  yaml-cpp-0.5.1.patch  yaml-cpp-0.6.2.patch  yaml-cpp-r423.patch  yaml-cpp-r482.patch  yaml-cpp_packagerev.sh
ext/half/: CMakeLists.txt  README.md
ext/pystring/: CMakeLists.txt
ext/sampleicc/: CMakeLists.txt  README.md
ext/sse2neon/: CMakeLists.txt
ext/utils/: StringUtils.h
ext/xxHash/: CMakeLists.txt
include/OpenColorIO/: CMakeLists.txt  OpenColorABI.h.in  OpenColorAppHelpers.h  OpenColorIO.h  OpenColorTransforms.h  OpenColorTypes.h
src/: CMakeLists.txt
src/OpenColorIO/: AVX.h  AVX2.h  AVX512.h  AllocationOp.cpp  AllocationTransform.cpp  Baker.cpp  BakingUtils.cpp  BakingUtils.h  BitDepthUtils.cpp  BitDepthUtils.h  CMakeLists.txt  CPUInfo.cpp  CPUInfo.h  CPUInfoConfig.h.in  CPUProcessor.cpp  CPUProcessor.h  Caching.cpp  Caching.h  Categories.h  ColorSpace.cpp  ColorSpaceSet.cpp  ColorSpaceTransform.cpp  ColorSpaceUtils.cpp  ColorSpaceUtils.h  Config.cpp  ConfigUtils.cpp  ConfigUtils.h  Context.cpp  ContextVariableUtils.cpp  ContextVariableUtils.h  CustomKeys.h  Display.cpp  Display.h  DynamicProperty.cpp  DynamicProperty.h  Exception.cpp  ExponentOps.cpp  ExponentTransform.cpp  FileFormat3DL.cpp  FileFormatCC.cpp  (+92 more)
src/aftereffects/: DrawbotBot.cpp  DrawbotBot.h  OpenColorIO_AE.cpp  OpenColorIO_AE.h  OpenColorIO_AE_ArbData.cpp  OpenColorIO_AE_Context.cpp  OpenColorIO_AE_Context.h  OpenColorIO_AE_Dialogs.h  OpenColorIO_AE_Dialogs_Cocoa.mm  OpenColorIO_AE_Dialogs_Win.cpp  OpenColorIO_AE_GL.h  OpenColorIO_AE_PiPL.r  OpenColorIO_AE_UI.cpp
src/apps/: CMakeLists.txt
src/apputils/: CMakeLists.txt  argparse.cpp  argparse.h  logGuard.cpp  logGuard.h  measure.h  strutil.cpp  strutil.h
src/bindings/: CMakeLists.txt
src/cmake/: Config.cmake.in
src/core/: AllocationOp.cpp  AllocationOp.h  AllocationTransform.cpp  Baker.cpp  BitDepthUtils.cpp  BitDepthUtils.h  CDLOps.cpp  CDLOps.h  CDLTransform.cpp  CDLTransform.h  CMakeLists.txt  Caching.cpp  CineonLogToLinTransform.cpp  ClampOp.cpp  ClampOp.h  ClampTransform.cpp  ColorSpace.cpp  ColorSpace.h  ColorSpaceTransform.cpp  ColorSpaceTransform.h  Config.cpp  Config.h  Context.cpp  CoordinateOps.cpp  CustomTransform.cpp  Display.cpp  Display.h  DisplayTransform.cpp  DisplayTransform.h  Exception.cpp  ExponentOps.cpp  ExponentOps.h  ExponentTransform.cpp  ExpressionOps.cpp  ExpressionOps.h  ExpressionTransform.cpp  FileFormat3DL.cpp  FileFormatCC.cpp  FileFormatCCC.cpp  FileFormatCDL.cpp  (+104 more)
src/core_gpu_tests/: CDLOp_test.cpp  CMakeLists.txt  Config_test.cpp  ExpOps_Test.cpp  ExpOps_test.cpp  GPUHelpers.cpp  GPUHelpers.h  GPUUnitTest.cpp  GPUUnitTest.h  LogOps_Test.cpp  LogOps_test.cpp  Lut1DOp_test.cpp  Lut3DOp_test.cpp  (+4 more)
tests/: CMakeLists.txt
(+3134 files in other folders)
